--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -9,6 +9,7 @@ body {
   justify-content: space-between;
   padding: 100px;
   margin: 0;
+  position: relative;
 }
 a {
   text-decoration: none;
@@ -19,6 +20,7 @@ button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  padding: 0;
 }
 #mainLogo {
   width: 496px;
@@ -34,14 +36,14 @@ button {
   justify-content: center;
   align-items: center;
   border-radius: 29px;
-  padding: 30px 0 30px 0;
+  padding: 60px 0 60px 0;
+  margin: 0;
 }
 .inputContainer {
   width: 450px;
 }
 .inputLabel {
   font-size: 20px;
-  margin-top: 20px;
 }
 .inputBox {
   box-sizing: border-box;
@@ -53,6 +55,11 @@ button {
 .visibility {
   position: absolute;
   margin: -40px 0 0 410px;
+  cursor: pointer;
+}
+.visibilityProfilePW {
+  position: absolute;
+  margin: 25px 0 0 -40px;
   cursor: pointer;
 }
 #enterBtn {
@@ -67,11 +74,66 @@ button {
   margin: 20px 0 20px 0;
   cursor: pointer;
 }
-#extraFunctions {
+#rowInputContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.active {
+.rowInput {
+  display: flex;
+  flex-direction: column;
+}
+.selectBox {
+  width: 139px;
+  height: 45px;
+  box-sizing: border-box;
+  margin: 10px 0 10px 0;
+}
+#extraFunctions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px 0 10px 0;
+}
+.hidden {
   display: none;
+}
+#deleteAccountModal {
+  position: absolute;
+  background-color: black;
+  width: 506px;
+  height: 212px;
+  border: none;
+  border-radius: 8px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
+#deleteAccountLabel {
+  width: 100%;
+  height: 65%;
+  color: white;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #727272;
+}
+#decideBtnContainer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 45%;
+  margin: 0;
+}
+.decideBtn {
+  width: 50%;
+  color: white;
+  font-size: 30px;
+}
+.decideBtn:hover {
+  background-color: #82b1f0;
+}
+#yesDeleteAccountBtn {
+  border-right: 1px solid #727272;
 }
