--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -4,7 +4,7 @@ body {
   flex-direction: row;
   box-sizing: border-box;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: space-between;
   padding: 100px;
@@ -108,6 +108,9 @@ button {
   z-index: 1;
   display: flex;
   flex-direction: column;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 #deleteAccountLabel {
   width: 100%;
