--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -35,6 +35,7 @@ header {
   width: 27.82px;
   height: 34px;
   margin-right: 20px;
+  cursor: pointer;
 }
 #mainLogo {
   width: 140px;
@@ -122,7 +123,7 @@ td {
   left: 0;
   background-color: #b2b3b5;
   width: 213px;
-  height: 700px;
+  height: 7100px;
   box-sizing: border-box;
   padding: 50px 10px 10px 30px;
 }
@@ -140,7 +141,7 @@ td {
   background-color: transparent;
   border: none;
   padding: 0;
-  width: 193px;
+  width: 170px;
   display: flex;
   justify-content: flex-start;
   padding: 10px 0 10px 0px;
@@ -191,6 +192,7 @@ td {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0;
 }
 #scheduleTimeSelect {
   width: 138px;
