--- a/styles/joinStyle.css
+++ b/styles/joinStyle.css
@@ -1,25 +1,10 @@
+:root {
+  --main-color: #3e84e1;
+}
 body {
   background-color: #727272;
-  display: flex;
-  flex-direction: row;
-  box-sizing: border-box;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
   justify-content: space-between;
   padding: 100px;
-  margin: 0;
-}
-a {
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
-}
-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  padding: 0;
 }
 #mainLogo {
   width: 496px;
@@ -58,7 +43,7 @@ button {
 }
 #duplicateIDCheckBtn {
   position: absolute;
-  background-color: #3e84e1;
+  background-color: var(--main-color);
   color: white;
   width: 66px;
   height: 34px;
@@ -67,28 +52,10 @@ button {
   right: 170px;
   cursor: pointer;
 }
-.possible {
-  color: #3e84e1;
-}
-.impossible {
-  color: #ff0000;
-}
 .visibility {
   position: absolute;
   margin: 25px 0 0 -45px;
   cursor: pointer;
-}
-#enterBtn {
-  color: white;
-  background-color: #3e84e1;
-  font-size: 30px;
-  font-weight: 800;
-  width: 100%;
-  height: 60px;
-  border-radius: 10px;
-  margin: 20px 0 20px 0;
-  cursor: pointer;
-  border: none;
 }
 #rowInputContainer {
   display: flex;
@@ -104,9 +71,6 @@ button {
   height: 45px;
   box-sizing: border-box;
   margin: 10px 0 10px 0;
-}
-.hidden {
-  display: none;
 }
 #extraFunctions {
   display: flex;
