--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1,23 +1,14 @@
+:root {
+  --main-color: #3e84e1;
+}
 body {
   background-color: #f0f2f5;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
-  /* justify-content: center; */
-  margin: 0;
-}
-a {
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
-}
-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
 }
 header {
   background-color: #b2b3b5;
+  width: 100%;
   height: 71px;
   display: flex;
   flex-direction: row;
@@ -25,6 +16,7 @@ header {
   align-items: center;
   padding: 0 30px 0 30px;
   margin-top: 0;
+  box-sizing: border-box;
 }
 #headerLeft {
   display: flex;
@@ -46,6 +38,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: fit-content;
 }
 #userID {
   font-size: 36px;
@@ -57,7 +50,7 @@ header {
   width: 103px;
   height: 45px;
   border-radius: 30px;
-  background-color: #3e84e1;
+  background-color: var(--main-color);
   font-size: 15px;
   color: white;
   display: flex;
@@ -106,7 +99,7 @@ main {
 }
 .month:hover {
   text-decoration: underline;
-  text-decoration-color: #3e84e1;
+  text-decoration-color: var(--main-color);
   text-underline-position: under;
 }
 table {
@@ -170,7 +163,7 @@ td {
 #dailyScheduleHeader {
   width: 100%;
   height: 90px;
-  background-color: #3e84e1;
+  background-color: var(--main-color);
   color: white;
   display: flex;
   flex-direction: column;
