--- a/styles/commonStyle.css
+++ b/styles/commonStyle.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   display: flex;
   box-sizing: border-box;
@@ -19,4 +22,7 @@ button {
 }
 form {
   margin: 0;
+}
+input {
+  padding: 0;
 }
