--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -64,7 +64,7 @@ header {
   height: 22px;
   margin-left: 59px;
 }
-main {
+#mainContainer {
   width: 100%;
   height: 680px;
   display: flex;
@@ -73,6 +73,7 @@ main {
   align-items: center;
 }
 #calenderContainer {
+  width: 95%;
   display: flex;
   flex-direction: column;
   width: fit-content;
@@ -91,6 +92,11 @@ main {
 }
 #thisYear {
   font-size: 30px;
+  margin: 0 10px 0 10px;
+}
+#mainMonth {
+  display: flex;
+  flex-direction: row;
 }
 .month {
   font-size: 20px;
@@ -102,21 +108,34 @@ main {
   text-decoration-color: var(--main-color);
   text-underline-position: under;
 }
-table {
+#mainCalendar {
   margin: 10px 0 0 0;
-  border-collapse: collapse;
-  /* 테이블에 고정 사이즈 주고 자식태그 가로폭에 퍼센트로 */
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-th,
-td {
-  width: 150px;
-  height: 100px;
-  /* 고정으로 박아놓지 마 */
-  /* fles-basis */
-  text-align: left;
+.dateBox {
   border: 1px solid #b2b2b2;
+  width: 150px;
+  height: 115px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+  box-sizing: border-box;
 }
-#navBar {
+.dateNum {
+  align-self: flex-start;
+}
+.scheduleNum {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.navBar {
   position: fixed;
   top: 71;
   left: 0;
