--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -65,21 +65,15 @@ header {
   margin-left: 59px;
 }
 #mainContainer {
-  width: 100%;
+  width: 80%;
   height: 680px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-#calenderContainer {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
-  height: fit-content;
-}
 #timeContainer {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -93,6 +87,10 @@ header {
 #thisYear {
   font-size: 30px;
   margin: 0 10px 0 10px;
+}
+#selectMonth {
+  display: flex;
+  justify-content: space-between;
 }
 #mainMonth {
   display: flex;
@@ -108,21 +106,27 @@ header {
   text-decoration-color: var(--main-color);
   text-underline-position: under;
 }
+.selectedMonth {
+  display: inline;
+  box-shadow: inset 0 -30px 0 var(--main-color);
+  color: white;
+}
 #mainCalendar {
-  margin: 10px 0 0 0;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  margin: 10px 0 0 0;
+  display: grid;
+  grid-template-columns: repeat(7, 150px);
 }
 .dateBox {
   border: 1px solid #b2b2b2;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 150px;
-  height: 115px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   position: relative;
   box-sizing: border-box;
 }
