--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #3e84e1;
+  --hover-color: #82b1f0;
 }
 body {
   background-color: #f0f2f5;
@@ -64,9 +65,9 @@ header {
   height: 22px;
   margin-left: 59px;
 }
-#mainContainer {
+main {
   width: 80%;
-  height: 680px;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,14 +115,20 @@ header {
 #mainCalendar {
   width: 100%;
   margin: 10px 0 0 0;
-  display: grid;
-  grid-template-columns: repeat(7, 150px);
+  /* display: grid;
+  grid-template-columns: repeat(7, 150px); */
+  display: flex;
+  flex-direction: column;
+}
+.weekBox {
+  display: flex;
+  flex-direction: row;
 }
 .dateBox {
   border: 1px solid #b2b2b2;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 150px;
+  width: calc(100% / 7);
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -129,6 +136,10 @@ header {
   align-items: center;
   position: relative;
   box-sizing: border-box;
+  cursor: pointer;
+}
+.dateBox:hover {
+  background-color: var(--hover-color);
 }
 .dateNum {
   align-self: flex-start;
@@ -170,7 +181,7 @@ header {
   border-radius: 10px;
 }
 .memberName:hover {
-  background-color: #82b1f0;
+  background-color: var(--hover-color);
 }
 #teamMembers {
   display: flex;
