refactor: mainPage.jsp 달력 일자 출력 오류 해결 및 페이지 시작될 때 현재 달 표시되어 있도록 추가

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -89,7 +89,7 @@ main {
   font-size: 30px;
   margin: 0 10px 0 10px;
 }
-#selectMonth {
+#monthContainer {
   display: flex;
   justify-content: space-between;
 }
