style: 정규식 내 길이에 관한 예외처리 추가 및 정규식에 관한 모듈 따로 생성

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -183,7 +183,7 @@ main {
 .memberName:hover {
   background-color: var(--hover-color);
 }
-#teamMembers {
+#teamMembersList {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
