--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -58,6 +58,7 @@ header {
   flex-direction: row;
   align-items: center;
   padding: 0 0 0 13px;
+  border: none;
 }
 #logoutIcon {
   position: absolute;
