--- a/styles/joinStyle.css
+++ b/styles/joinStyle.css
@@ -45,7 +45,7 @@ body {
   position: absolute;
   background-color: var(--main-color);
   color: white;
-  width: 66px;
+  width: fit-content;
   height: 34px;
   border-radius: 10px;
   margin: 15px 0 0 0;
