--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -75,6 +75,7 @@ body {
 #openDeleteAccountModalBtn {
   background-color: transparent;
   border: none;
+  padding: 0;
 }
 .extraFunctionBtn {
   font-size: 15px;
