--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -131,9 +131,8 @@ main {
   flex-wrap: wrap;
   width: calc(100% / 7);
   height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  justify-items: center;
   align-items: center;
   position: relative;
   box-sizing: border-box;
@@ -143,13 +142,16 @@ main {
   background-color: var(--hover-color);
 }
 .dateNum {
-  align-self: flex-start;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
 }
 .scheduleNum {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  color: var(--main-color);
+  font-size: 25px;
+  font-weight: bold;
 }
 #navBar {
   position: fixed;
