feat: schedulePage에서 스케줄 수정하는 updateScheduleAction 구현, 미 schedulePage 내 createSchedule 함수 수정 필요 백엔드 통신 위한 form 태그 및 클릭 이벤트 등

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -284,8 +284,26 @@ main {
   background-color: var(--hover-color);
 }
 .scheduleName {
+  width: fit-content;
+}
+.scheduleTime {
+  width: 150px;
   font-size: 25px;
   padding-left: 20px;
+  border: none;
+  background-color: transparent;
+}
+.scheduleTime:focus {
+  outline: none;
+}
+.scheduleContent {
+  width: fit-content;
+  font-size: 25px;
+  border: none;
+  background-color: transparent;
+}
+.scheduleContent:focus {
+  outline: none;
 }
 .scheduleExtraFunctions {
   width: 100px;
