feat: schedulePage 내 일정 추가 및 수정 중 입력값 없을 때 alert 기능 구현 완료

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -257,6 +257,7 @@ main {
   font-weight: bold;
   color: white;
   background-color: #b7b7b7;
+  border: none;
 }
 #scheduleListContainer {
   width: 100%;
