feat: 팀장이 팀원 페이지 열어보기 기능 고민...

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -178,7 +178,6 @@ main {
   font-size: 20px;
   background-color: transparent;
   border: none;
-  padding: 0;
   width: 170px;
   display: flex;
   justify-content: flex-start;
@@ -187,6 +186,10 @@ main {
 }
 .memberName:hover {
   background-color: var(--hover-color);
+  padding-left: 10px;
+}
+.memberName:focus {
+  outline: none;
 }
 #teamMembersList {
   display: flex;
